@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.45 2008-06-15 08:01:54 nicm Exp $ */
+/* $Id: cmd.c,v 1.46 2008-06-16 06:10:02 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -56,6 +56,7 @@ const struct cmd_entry *cmd_table[] = {
 	&cmd_set_option_entry,
 	&cmd_set_window_option_entry,
 	&cmd_show_options_entry,
+	&cmd_show_window_options_entry,
 	&cmd_start_server_entry,
 	&cmd_swap_window_entry,
 	&cmd_switch_client_entry,
